specs/grammar-tests/positive/minimal.lace
get("$BASE_URL/health")
.expect(status: 200)
.check(totalDelayMs: 500)
