specs/grammar-tests/negative/unclosed-call.lace
get("$BASE_URL/health"
.expect(status: 200)
